--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,26 @@
   margin-top: 0;
   padding-top: 0;
 }
+
+.Problem {
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  justify-content: center;
+  padding-left: 2em;
+
+}
+
+.Problem-user-code {
+  margin-top: 0;
+  padding-left: 5em;
+  justify-items: center;
+}
+
+.Problem-template-code {
+  margin-top: 0;
+  padding-left: 0;
+}
+
+
