--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,13 @@
   padding-left: 0;
 }
 
+.Problem-desc {
+  margin-top: 0;
+  padding-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  padding-left: 0;
+  width: 40%;
+}
+
 
