--- a/src/App.css
+++ b/src/App.css
@@ -59,14 +59,16 @@
 }
 
 .Test-passed {
-  background: #00FF00;
-  color: #000;
+  background: #49CA67;
+  color: #1C1F23;
+  font-weight: bold;
 
 }
 
 .Test-failed {
-  background: #FF0000;
-  color: #000;
+  background: #EF4547;
+  color: #1C1F23;
+  font-weight: bold;
 }
 
 
