--- a/src/App.css
+++ b/src/App.css
@@ -1,51 +1,60 @@
 .App {
-  text-align: justify;
+
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: calc(10px + 4vmin);;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  margin-top: 0;
-  padding-top: 0;
+    background-color: #282c34;
+    min-height: calc(10px + 4vmin);;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .Problem {
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 10em;
-  padding-bottom: 0;
-  justify-content: left;
-  padding-left: 2em;
-  text-align: left;
+    margin-top: 0;
+    padding-top: 0;
+    padding-bottom: 10em;
+    justify-content: left;
+    padding-left: 2em;
+    text-align: left;
+    background-color: #1C1F23;
+    color: #efe9e7;
+}
+
+.Problem-title {
+    margin-top: 0;
+    padding-top: 1em;
 }
 
 .Problem-user-code {
-  margin-top: 0;
-  padding-left: 5em;
-  justify-items: left;
+    margin-top: 0;
+    padding-left: 5em;
+    justify-items: left;
 }
 
 .Problem-template-code {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-  font-size: 1.2em;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
 .Problem-desc {
-  margin-top: 0;
-  padding-top: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  width: 95%;
-  max-width: 50em;
+    margin-top: 0;
+    padding-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    width: 95%;
+    max-width: 50em;
 }
 
 .Problem-solution {
@@ -59,16 +68,18 @@
 }
 
 .Test-passed {
-  background: #49CA67;
-  color: #1C1F23;
-  font-weight: bold;
-
+    background: #49CA67;
+    color: #1C1F23;
+    font-weight: bold;
 }
 
 .Test-failed {
-  background: #EF4547;
-  color: #1C1F23;
-  font-weight: bold;
+    background: #EF4547;
+    color: #1C1F23;
+    font-weight: bold;
 }
 
+code[class^="hljs-"] {
+    background: #000;
+}
 
