--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,16 @@ body {
     font-weight: bold;
 }
 
+.helpButton {
+    margin-top: 0.5em;
+    height: 2em;
+}
+
+.submitButton {
+    margin-top: 0.5em;
+    height: 2em;
+}
+
 code[class^="hljs-"] {
     background: #000;
 }
