Added an explanation section to the home page

--- a/src/App.css
+++ b/src/App.css
@@ -130,3 +130,7 @@ code {
     display: none;
 }
 
+.wecode-title {
+    font-size: 50px; /* adjust this value to change the size */
+    color: #FFC300; /* adjust this value to change the color */
+}
