--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ body {
 }
 
 .Test-passed {
-    background: #49CA67;
+    background: #12f387;
     color: #1C1F23;
     font-weight: bold;
     width: 100%;
@@ -88,7 +88,7 @@ body {
 }
 
 .Test-failed {
-    background: #EF4547;
+    background: #ff8e83;
     color: #1C1F23;
     font-weight: bold;
     width: 100%;
