--- a/src/Home.css
+++ b/src/Home.css
@@ -1,41 +1,37 @@
-/* Existing styles */
-
 .home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 1.25em;
     background-color: #f5f5f5;
 }
 
 .welcome-message {
     color: #333;
-    font-size: 50px;
-    margin-bottom: 20px;
+    font-size: 3.125em;
+    margin-bottom: 1.25em;
 }
 
 .problem-link {
     color: #007bff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 1.125em;
 }
-
-/* Additional styles */
 
 .custom-header {
     font-weight: bold;
     text-transform: uppercase;
-
 }
 
 .custom-link {
     background-color: #007bff;
     color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 0.625em 1.25em;
+    border-radius: 0.3125em;
     text-decoration: none;
 }
+
 .content-container {
     display: flex;
     justify-content: space-between;
@@ -43,11 +39,16 @@
 
 .main-content {
     width: 70%;
-    padding-left: 20px; /* adjust this value as needed */
-    }
+    padding-left: 1.25em; /* adjust this value as needed */
+}
 
 .explanation {
     width: 25%;
-    padding: 20px;
-    border-left: 1px solid #ccc;
+    padding: 1.25em;
+    border-left: 0.0625em solid #ccc;
+}
+
+.wecode-title {
+    font-size: 2.5em; /* adjust this value to change the size */
+    color: #000080; /* adjust this value to change the color */
 }
