--- a/src/Home.css
+++ b/src/Home.css
@@ -48,7 +48,16 @@
     border-left: 0.0625em solid #ccc;
 }
 
+h1 {
+    font-size: 2em;
+    font-weight: bold;
+}
+
 .wecode-title {
-    font-size: 2.5em; /* adjust this value to change the size */
-    color: #000080; /* adjust this value to change the color */
+    margin-top: -0.55em;
+    padding-top: 0;
+    font-size: 8em;
+    font-weight: bold;
+    margin-bottom: 0.3em;
+    color: #a475f0;
 }
