--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 body {
     background-color: #1C1F23;
 }
