--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,8 @@
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 .home-container {
     display: flex;
     flex-direction: column;
