--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,61 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@layer base {
+    h1 {
+        @apply text-3xl;
+        @apply font-bold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    h2 {
+        @apply text-2xl;
+        @apply font-bold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    h3 {
+        @apply text-xl;
+        @apply font-bold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    h4 {
+        @apply text-lg;
+        @apply font-bold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    h5 {
+        @apply text-base;
+        @apply font-bold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    h6 {
+        @apply text-base;
+        @apply font-semibold;
+        margin-bottom: 0.25em;
+        margin-top: 1em;
+    }
+
+    ol,
+    ul {
+        list-style: circle;
+        margin-left: 1.5em;
+    }
+
+    p {
+        @apply text-base;
+        margin-bottom: 1em;
+    }
+}
+
 body {
     background-color: #1C1F23;
 }
